# django-turbo-2

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: .env.example  devcontainer.json  docker-compose.yaml
.devcontainer/app/: Dockerfile
.devcontainer/db/: my.cnf
.devcontainer/web/: default.conf
sources/: Makefile
sources/backend/: Makefile  pyproject.toml
sources/backend/app/apiv1/: urls.py
sources/backend/app/apiv1/models/: __init__.py  book.py
sources/backend/app/apiv1/views/: bookView.py
sources/backend/app/config/: settings.py  urls.py
sources/backend/app/utils/: decorators.py
sources/frontend/: Makefile  package.json  pnpm-lock.yaml  turbo.json
